# MatPlotOpenCV

./: .gitignore  CMakeLists.txt  LICENSE  README.md
MatPlotOpenCV/: README.md  README_Design.md
MatPlotOpenCV/include/: axes.h  figure.h  plot_command.h
MatPlotOpenCV/tests/: test_MatPlotOpenCV.cpp
docs/: Doxyfile.in
include/: axes.h  color.h  figure.h  plot_command.h
src/: figure.cpp
tests/: test_MatPlotOpenCV.cpp
